--- a/templates/calculator_results.html
+++ b/templates/calculator_results.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <!-- Your HTML code goes here! -->
+        <p>You chose to {{user_operation}} {{num1}} and {{num2}} <br>
+           Your result is: {{result}}
+        </p>
 
 
 
