--- a/templates/horoscope_results.html
+++ b/templates/horoscope_results.html
@@ -5,6 +5,10 @@
     </head>
     <body>
         <!-- Your HTML code goes here! -->
+        <h2>Hello, {{name}}!</h2>
+        <h4>Your sign is <u>{{horoscope_sign}}</u></h4>
+        <p>You are {{personality}}</p>
+        <p>Your lucky number is {{lucky_number}}</p>
 
         
 
